--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,13 +7,19 @@ authors = [
 ]
 
 readme = "README.md"
-requires-python = "3.11.9"
+requires-python = ">=3.11"
 dependencies = [
     "fastapi (>=0.123.5,<0.124.0)",
     "uvicorn[standard] (>=0.38.0,<0.39.0)",
     "sqlmodel (>=0.0.27,<0.0.28)",
+    "pydantic-settings (>=2.12.0,<3.0.0)",
+    "psycopg2-binary (>=2.9.11,<3.0.0)",
+    "cloud-sql-python-connector[pg8000] (>=1.18.5,<2.0.0)",
+    "google-cloud-storage (>=3.6.0,<4.0.0)",
 ]
 
+[tool.poetry]
+package-mode = false
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
