--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "psycopg2-binary (>=2.9.11,<3.0.0)",
     "cloud-sql-python-connector[pg8000] (>=1.18.5,<2.0.0)",
     "google-cloud-storage (>=3.6.0,<4.0.0)",
+    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
 ]
 
 [tool.poetry]
