--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -30,5 +30,7 @@ build-backend = "poetry.core.masonry.api"
 [dependency-groups]
 dev = [
     "black (>=25.11.0,<26.0.0)",
-    "ruff (>=0.14.7,<0.15.0)"
+    "ruff (>=0.14.7,<0.15.0)",
+    "pytest (>=9.0.2,<10.0.0)",
+    "pytest-asyncio (>=1.3.0,<2.0.0)"
 ]
