--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,3 +14,7 @@ DEBUG=True
 SECRET_KEY=your-secret-key-here-change-in-production
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# Google ADK
+GOOGLE_GENAI_USE_VERTEXAI=0
+GOOGLE_API_KEY=
