--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,6 +10,9 @@ DB_PASS=
 APP_NAME=AlgoSensei
 DEBUG=True
 
+# CORS
+EXTENSION_URL=
+
 # Security
 SECRET_KEY=your-secret-key-here-change-in-production
 ALGORITHM=HS256
@@ -17,4 +20,4 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 
 # Google ADK
 GOOGLE_GENAI_USE_VERTEXAI=0
-GOOGLE_API_KEY=
+GOOGLE_API_KEY=1234567890abcdefghijklmnopqrstuvwxyz
