--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,10 +18,15 @@ dependencies = [
     "google-cloud-storage (>=3.6.0,<4.0.0)",
     "pwdlib[argon2] (>=0.3.0,<0.4.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
+    "google-adk[a2a] (>=1.21.0,<2.0.0)",
+    "pydantic[email] (>=2.12.5,<3.0.0)",
 ]
 
 [tool.poetry]
 package-mode = false
+
+[tool.poetry.dependencies]
+python = "^3.11"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
